versions/v2.9/modules/en/pages/rancher-admin/experimental-features/unsupported-storage-drivers.adoc
= Allowing Unsupported Storage Drivers
:page-languages: [en, zh]
:revdate: 2025-09-12
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/enable-experimental-features/unsupported-storage-drivers.adoc 
:product-path: rancher-admin/experimental-features/unsupported-storage-drivers.adoc
ifeval::["{build-type}" != "community"]
:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc
endif::[]

This feature allows you to use types for storage providers and provisioners that are not enabled by default.

To enable or disable this feature, refer to the instructions on {xref-experimental-features}[the main page about enabling experimental features.]

|===
| Environment Variable Key | Default Value | Description

| `unsupported-storage-drivers`
| `false`
| This feature enables types for storage providers and provisioners that are not enabled by default.
|===

== Types for Persistent Volume Plugins that are Enabled by Default

Below is a list of storage types for persistent volume plugins that are enabled by default. When enabling this feature flag, any persistent volume plugins that are not on this list are considered experimental and unsupported:

|===
| Name | Plugin

| Amazon EBS Disk
| `aws-ebs`

| AzureFile
| `azure-file`

| AzureDisk
| `azure-disk`

| Google Persistent Disk
| `gce-pd`

| VMware vSphere Volume
| `vsphere-volume`

| Local
| `local`

| Network File System
| `nfs`

| hostPath
| `host-path`
|===

== Types for StorageClass that are Enabled by Default

Below is a list of storage types for a StorageClass that are enabled by default. When enabling this feature flag, any persistent volume plugins that are not on this list are considered experimental and unsupported:

|===
| Name | Plugin

| Amazon EBS Disk
| `aws-ebs`

| AzureFile
| `azure-file`

| AzureDisk
| `azure-disk`

| Google Persistent Disk
| `gce-pd`

| VMware vSphere Volume
| `vsphere-volume`

| Local
| `local`
|===
